<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
        android:id="@+id/menu_refresh"
        android:showAsAction="always"
        android:title="@string/menu_refresh"
        android:icon="@drawable/light_navigation_refresh"/>
    <item
        android:id="@+id/menu_account"
        android:showAsAction="always"
        android:title="@string/menu_account"
        android:icon="@drawable/light_social_person">
        <menu>
		    <item
		        android:id="@+id/menu_profile"
		        android:title="@string/menu_profile"/>
		    <item
		        android:id="@+id/menu_friends"
		        android:title="@string/menu_friends"/>
		    <item
		        android:id="@+id/menu_settings"
		        android:title="@string/menu_settings"/>
		    <item
		        android:id="@+id/menu_sign_out"
		        android:title="@string/menu_sign_out"/>            
        </menu>
   	</item>
    <item 
        android:id="@+id/menu_search"
        android:showAsAction="never|withText"
        android:title="@string/menu_search"
        android:icon="@drawable/light_action_search"/>
    <item
        android:id="@+id/menu_compose"
        android:showAsAction="never|withText"
        android:title="@string/menu_compose"
        android:icon="@drawable/light_action_compose"/>
    <item
        android:id="@+id/menu_preferences"
        android:showAsAction="never|withText"
        android:title="@string/menu_preferences"
        android:icon="@drawable/light_action_settings"/>
</menu>