<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_email"
        android:showAsAction="always"
        android:title="@string/menu_email"
        android:icon="@drawable/dark_content_email">
        <menu>
		    <item
		        android:id="@+id/menu_resend_code"
		        android:title="@string/menu_resend_code"/>
		    <item
		        android:id="@+id/menu_reset_password"
		        android:title="@string/menu_reset_password"/> 
		    <item
		        android:id="@+id/menu_add_device"
		        android:title="@string/menu_add_device"/>           
        </menu>
   	</item>
   	<item
        android:id="@+id/menu_settings"
        android:showAsAction="always"
        android:title="@string/menu_settings"
        android:icon="@drawable/dark_action_settings">
        <menu>
		    <item
		        android:id="@+id/menu_about"
		        android:title="@string/menu_about"/>
		    <item
		        android:id="@+id/menu_network_connection"
		        android:title="@string/menu_network_connection"/>     
        </menu>
	</item>
</menu>